[gd_scene load_steps=65 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player_sheet.png" type="Texture" id=2]
[ext_resource path="res://player_face.png" type="Texture" id=3]
[ext_resource path="res://Source/EnemyManager.gd" type="Script" id=4]
[ext_resource path="res://Source/CameraManager.gd" type="Script" id=5]
[ext_resource path="res://Source/UI.gd" type="Script" id=6]
[ext_resource path="res://Source/PlayerManager.gd" type="Script" id=7]
[ext_resource path="res://neodgm.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://background.png" type="Texture" id=9]
[ext_resource path="res://sidewall.png" type="Texture" id=10]
[ext_resource path="res://sidewall2.png" type="Texture" id=11]
[ext_resource path="res://faceframe.png" type="Texture" id=12]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="PlaneMesh" id=19]
size = Vector2( 2, 0.82 )

[sub_resource type="SpatialMaterial" id=20]
albedo_texture = ExtResource( 9 )

[sub_resource type="PlaneMesh" id=21]
size = Vector2( 1, 0.82 )

[sub_resource type="SpatialMaterial" id=22]
albedo_texture = ExtResource( 10 )

[sub_resource type="SpatialMaterial" id=23]
albedo_texture = ExtResource( 11 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.07, 0.19, 0.1 )

[sub_resource type="AtlasTexture" id=30]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 0, 60, 80, 60 )

[sub_resource type="AtlasTexture" id=31]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 80, 60, 80, 60 )

[sub_resource type="AtlasTexture" id=32]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 160, 60, 80, 60 )

[sub_resource type="AtlasTexture" id=33]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 240, 60, 80, 60 )

[sub_resource type="AtlasTexture" id=34]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 320, 60, 80, 60 )

[sub_resource type="AtlasTexture" id=35]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 400, 60, 80, 60 )

[sub_resource type="AtlasTexture" id=36]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 480, 60, 80, 60 )

[sub_resource type="AtlasTexture" id=37]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 560, 60, 80, 60 )

[sub_resource type="AtlasTexture" id=24]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 60 )

[sub_resource type="AtlasTexture" id=25]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 60 )

[sub_resource type="AtlasTexture" id=26]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 60 )

[sub_resource type="AtlasTexture" id=27]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 80, 60 )

[sub_resource type="AtlasTexture" id=28]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 80, 60 )

[sub_resource type="AtlasTexture" id=39]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 80, 120, 80, 60 )

[sub_resource type="AtlasTexture" id=38]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 0, 120, 80, 60 )

[sub_resource type="AtlasTexture" id=43]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 0, 360, 80, 60 )

[sub_resource type="AtlasTexture" id=41]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 80, 360, 80, 60 )

[sub_resource type="AtlasTexture" id=46]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 80, 180, 80, 60 )

[sub_resource type="AtlasTexture" id=45]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 160, 180, 80, 60 )

[sub_resource type="AtlasTexture" id=42]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 80, 60 )

[sub_resource type="AtlasTexture" id=40]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 0, 300, 80, 60 )

[sub_resource type="AtlasTexture" id=44]
flags = 19
atlas = ExtResource( 2 )
region = Rect2( 0, 180, 80, 60 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "step",
"speed": 6.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 39 ), SubResource( 38 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "left_punch",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ) ],
"loop": true,
"name": "right_punch",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": true,
"name": "knockbacked",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ) ],
"loop": true,
"name": "ready_punch",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.08, 0.04, 0.1 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.05, 0.06, 0.1 )

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "left_jab"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachine" id=9]
states/idle/node = SubResource( 14 )
states/idle/position = Vector2( 148, 65 )
states/left_jab/node = SubResource( 15 )
states/left_jab/position = Vector2( 385, 60 )
states/walk/node = SubResource( 49 )
states/walk/position = Vector2( 148, 162 )
transitions = [ "idle", "left_jab", SubResource( 16 ), "left_jab", "idle", SubResource( 17 ), "idle", "walk", SubResource( 50 ), "walk", "idle", SubResource( 51 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="Animation" id=47]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=52]
resource_name = "fall"

[sub_resource type="Animation" id=11]
resource_name = "idle"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "go_idle"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=13]
resource_name = "left_jab"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_PlayerAttackHit"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "left_punch" ]
}

[sub_resource type="Animation" id=48]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.1, 0.2, 0.1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.6, 0.3, 0.01 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.27239, 0.01, 1.54254 )

[sub_resource type="GDScript" id=5]
script/source = "extends Spatial


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=18]
size = 64
font_data = ExtResource( 8 )

[node name="Game" type="Node"]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 2.22108, 0, 0, 0, 1, 0, 0, 0, 1.54562, 0.0116724, -0.0987435, -0.0977687 )
mesh = SubResource( 1 )
material/0 = null

[node name="Background" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -5.96046e-08, -1, 0, 1, -5.96046e-08, 0, 0.4, -0.4 )
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Sidewall" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0.866025, -3.78552e-08, 0, -4.37114e-08, -1, -0.866025, 0.5, -2.18557e-08, -1.25, 0.4, 0.03 )
mesh = SubResource( 21 )
skeleton = NodePath("../Background")
material/0 = SubResource( 22 )

[node name="Sidewall2" type="MeshInstance" parent="."]
transform = Transform( 0.5, -0.866025, 3.78552e-08, 0, -4.37114e-08, -1, 0.866025, 0.5, -2.18557e-08, 1.25, 0.4, 0.03 )
mesh = SubResource( 21 )
skeleton = NodePath("../Background")
material/0 = SubResource( 23 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 2.599, 6.13 )
projection = 1
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Camera"]

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.494798, 0, 0 )
script = ExtResource( 7 )

[node name="PlayerGround" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.02, 0.2, 0 )
shape = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite3D" parent="Player"]
offset = Vector2( 0, 30 )
frames = SubResource( 29 )
animation = "idle"
playing = true

[node name="LeftNotifler" type="VisibilityNotifier" parent="Player"]
aabb = AABB( -0.35, -0.66, 0, 0.025, 1.32, 0.1 )

[node name="RightNOtifler" type="VisibilityNotifier" parent="Player"]
aabb = AABB( 1, -0.66, 0, 0.025, 1.32, 0.1 )

[node name="PlayerAttackHit" type="Area" parent="Player"]
visible = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Player/PlayerAttackHit"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0478983, 0.292934, 0 )
shape = SubResource( 8 )

[node name="CollisionShape2" type="CollisionShape" parent="Player/PlayerAttackHit"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.147898, 0.292934, 0 )
shape = SubResource( 12 )

[node name="PlayerAnimTree" type="AnimationTree" parent="Player"]
tree_root = SubResource( 9 )
anim_player = NodePath("PlayerAnim")
active = true
parameters/playback = SubResource( 10 )

[node name="PlayerAnim" type="AnimationPlayer" parent="Player/PlayerAnimTree"]
root_node = NodePath("../..")
anims/RESET = SubResource( 47 )
anims/fall = SubResource( 52 )
anims/idle = SubResource( 11 )
anims/left_jab = SubResource( 13 )
anims/walk = SubResource( 48 )

[node name="Enemy" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.27614, 0.21, 0 )
script = ExtResource( 4 )

[node name="Ground" type="CollisionShape" parent="Enemy"]
shape = SubResource( 6 )

[node name="Sprite3D" type="Sprite3D" parent="Enemy"]
transform = Transform( 0.5, 0, 0, 0, 0.6, 0, 0, 0, 1, -0.0026277, 0.0210097, 0.00174046 )
layers = 2
modulate = Color( 1, 0, 0, 1 )
billboard = 2
texture = ExtResource( 1 )

[node name="LeftNotifler" type="VisibilityNotifier" parent="Enemy"]
aabb = AABB( -0.176371, 0.138184, -0.022, 0.0246167, 0.5, 0.1 )

[node name="RightNOtifler" type="VisibilityNotifier" parent="Enemy"]
aabb = AABB( 0.151266, 0.138184, -0.022, 0.0246167, 0.5, 0.1 )

[node name="EnemyDetecter" type="Area" parent="Enemy"]

[node name="CollisionShape" type="CollisionShape" parent="Enemy/EnemyDetecter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00999999, 0.3, 0 )
shape = SubResource( 4 )

[node name="EnemyHurt" type="Area" parent="Enemy"]

[node name="Ground" type="CollisionShape" parent="Enemy/EnemyHurt"]
shape = SubResource( 6 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 3 )

[node name="StaticBody2" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -1.13641, 1.14415, 0.565178 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2"]
shape = SubResource( 3 )

[node name="StaticBody3" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 1.10497, 1.14415, 0.565178 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody3"]
shape = SubResource( 3 )

[node name="TurnManager" type="Spatial" parent="."]
script = SubResource( 5 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="TopUI" type="VBoxContainer" parent="UILayer/UI"]
margin_left = 29.0
margin_top = 14.0
margin_right = 993.0
margin_bottom = 142.0

[node name="Scoreboard" type="HBoxContainer" parent="UILayer/UI/TopUI"]
margin_right = 964.0
margin_bottom = 60.0

[node name="PlayerHPbar" type="ProgressBar" parent="UILayer/UI/TopUI/Scoreboard"]
margin_right = 450.0
margin_bottom = 60.0
rect_min_size = Vector2( 450, 60 )
value = 100.0
percent_visible = false

[node name="Score" type="HBoxContainer" parent="UILayer/UI/TopUI/Scoreboard"]
margin_left = 454.0
margin_right = 510.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="PlayerScore" type="Label" parent="UILayer/UI/TopUI/Scoreboard/Score"]
margin_top = 14.0
margin_right = 16.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 7 )
text = "0"

[node name="Control" type="Control" parent="UILayer/UI/TopUI/Scoreboard/Score"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="EnemyScore" type="Label" parent="UILayer/UI/TopUI/Scoreboard/Score"]
margin_left = 40.0
margin_top = 14.0
margin_right = 56.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 7 )
text = "0"

[node name="EnemyHPbar" type="ProgressBar" parent="UILayer/UI/TopUI/Scoreboard"]
margin_left = 514.0
margin_right = 964.0
margin_bottom = 60.0
rect_min_size = Vector2( 450, 60 )
value = 100.0
percent_visible = false

[node name="Face" type="HBoxContainer" parent="UILayer/UI/TopUI"]
margin_top = 64.0
margin_right = 964.0
margin_bottom = 128.0

[node name="Control" type="Control" parent="UILayer/UI/TopUI/Face"]
margin_right = 10.0
margin_bottom = 64.0
rect_min_size = Vector2( 10, 0 )

[node name="PlayerFrame" type="TextureRect" parent="UILayer/UI/TopUI/Face"]
margin_left = 14.0
margin_right = 78.0
margin_bottom = 64.0
texture = ExtResource( 12 )

[node name="PlayerFace" type="TextureRect" parent="UILayer/UI/TopUI/Face/PlayerFrame"]
margin_left = 4.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 60.0
texture = ExtResource( 3 )

[node name="Control2" type="Control" parent="UILayer/UI/TopUI/Face"]
margin_left = 82.0
margin_right = 882.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="EnemyFrame" type="TextureRect" parent="UILayer/UI/TopUI/Face"]
margin_left = 886.0
margin_right = 950.0
margin_bottom = 64.0
texture = ExtResource( 12 )

[node name="EnemyFace" type="TextureRect" parent="UILayer/UI/TopUI/Face/EnemyFrame"]
margin_left = 60.0
margin_top = 4.0
margin_right = 116.0
margin_bottom = 60.0
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 3 )

[node name="Control3" type="Control" parent="UILayer/UI/TopUI/Face"]
margin_left = 954.0
margin_right = 964.0
margin_bottom = 64.0
rect_min_size = Vector2( 10, 0 )

[node name="InputState" type="Label" parent="UILayer/UI"]
margin_left = 9.0
margin_top = 519.0
margin_right = 49.0
margin_bottom = 583.0
custom_fonts/font = SubResource( 18 )

[node name="InputState2" type="Label" parent="UILayer/UI/InputState"]
margin_top = -65.0
margin_right = 40.0
margin_bottom = -1.0
custom_colors/font_color = Color( 1, 1, 1, 0.317647 )
custom_fonts/font = SubResource( 18 )

[connection signal="player_died" from="Player" to="UILayer/UI" method="_on_player_died"]
[connection signal="screen_entered" from="Player/LeftNotifler" to="Camera" method="_on_Player_LeftNotifler_screen_entered"]
[connection signal="screen_exited" from="Player/LeftNotifler" to="Camera" method="_on_Player_LeftNotifler_screen_exited"]
[connection signal="screen_entered" from="Player/RightNOtifler" to="Camera" method="_on_Player_RightNOtifler_screen_entered"]
[connection signal="screen_exited" from="Player/RightNOtifler" to="Camera" method="_on_Player_RightNOtifler_screen_exited"]
[connection signal="enemy_died" from="Enemy" to="UILayer/UI" method="_on_Enemy_died"]
[connection signal="body_entered" from="Enemy/EnemyDetecter" to="Enemy" method="_on_Detectbox_body_entered"]
[connection signal="body_exited" from="Enemy/EnemyDetecter" to="Enemy" method="_on_Detectbox_body_exited"]
[connection signal="area_entered" from="Enemy/EnemyHurt" to="Enemy" method="_on_HurtHit_area_entered"]
